--- a/app/views/wspedidos/order_change.html.erb
+++ b/app/views/wspedidos/order_change.html.erb
@@ -1,24 +1,31 @@
 <h1>Bem-vinda(o) <%= @order.cliente_razaosocial %></h1>
 
 <h2>Seu pedido é o número <%= @order.numero %></h2> 
-
-<table id="stockTable" class="table table-striped">
-  <thead>
-    <tr>
-      <th>Quer troca?</th>
-      <th>Nome Produto</th>
-      <th>SKU</th>
-      <th>Quantidade</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @items.each do |item| %>
+<%= form_with url: generate_order_change_path do |form| %>
+  <table id="stockTable" class="table table-striped">
+    <thead>
       <tr>
-        <td><%#= f.check_box :send_email %> <br /></td>
-        <td><%= item.nome_produto%></td>
-        <td><%= item.sku%></td>
-        <td><%= item.quantidade%></td>
+        <th>Quer troca?</th>
+        <th>Nome Produto</th>
+        <th>SKU</th>
+        <th>Valor Unitário</th>
+        <th>Quantidade</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @items.each do |item| %>
+        <tr>
+          <td><%= form.check_box :id %> <br /></td>
+          <td><%= item.nome_produto%></td>
+          <td><%= item.sku%></td>
+          <td><%= item.valor_total%></td>
+          <td><%= item.quantidade%></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <h3>Motivo</h3>
+  <%= text_area(:change, :description, size: "100X100") %><br>
+  <%= form.submit nil, :class => 'btn btn-primary' %>
+
+<% end %>
