--- a/app/views/wspedidos/initial_screen.html.erb
+++ b/app/views/wspedidos/initial_screen.html.erb
@@ -1,10 +1,30 @@
-<div class="page-header">
-  <h1><%=t '.title', :default => 'Buscar Pedido'%></h1>
+<div class="row justify-content-center">
+  <a href="/"><img src="https://17741.cdn.simplo7.net/static/17741/configuracao/logo_151893456531094.png" alt="Purchase Store" title="Purchase Store"></a>
+  <div class="col-12">
+    <div class="page-header">
+      <h1><%=t '.title', :default => 'Buscar Pedido'%></h1>
+    </div>
+  </div>
+  <div class="col-12">
+    <h3>Insira o número do pedido da compra efetuada em nossa loja para que possamos identificar os produtos para qual deseja solicitar a troca.</h3>
+  </div>
+  <div class="row">
+    <%= form_with url: search_orders_path do |form| %>
+      <div class="form-group">
+        <div class="col-6 align-self-center">
+          <%= form.label :pedido %>
+          <%= form.text_field :pedido, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-6">
+          <%= form.label :cpf %>
+          <%= form.text_field :cpf, class: "form-control"  %>
+        </div>
+      </div>
+      <div class="col-6 align-self-center">
+        <%= form.submit "Buscar Pedido", :class => 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
 </div>
-<%= form_with url: search_orders_path do |form| %>
-  <%= form.label :pedido %>
-  <%= form.text_field :pedido %>
-  <%= form.label :cpf %>
-  <%= form.text_field :cpf %>
-  <%= form.submit nil, :class => 'btn btn-primary' %>
-<% end %>
