Adjust some layouts

--- a/app/views/wspedidos/change_order_saved.html.erb
+++ b/app/views/wspedidos/change_order_saved.html.erb
@@ -1,1 +1,10 @@
-<h1>Solicitação enviada</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Solicitação enviada</h1>
+    </div>
+    <div class="col">
+      <h2>Entraremos em contato em breve!</h2>
+      <a href="https://www.purchasestore.com.br">Retornar ao site</a>
+    </div>
+</div>
