--- a/app/views/wspedidos/order_change.html.erb
+++ b/app/views/wspedidos/order_change.html.erb
@@ -28,6 +28,6 @@
   <div>
   <%= form.hidden_field :order_id, value: @order.id %>
   <%= text_area(:change, :description, size: "100X100") %><br>
-  <%= form.submit nil, :class => 'btn btn-primary' %>
+  <%= form.submit "Salvar", :class => 'btn btn-primary' %>
 
 <% end %>
