--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,19 @@
   </head>
 
   <body>
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+    <p class="navbar-text float-right">
+    <% if user_signed_in? %>
+      Logado como: <strong><%= current_user.email %></strong>.
+      <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> |
+      <%= link_to "Solicitações de troca", order_changes_path, :class => 'navbar-link'  %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
