--- a/app/views/order_changes/index.html.erb
+++ b/app/views/order_changes/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Order Changes</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Número Pedido</th>
@@ -10,7 +8,9 @@
       <th>Description</th>
       <th>Clothes</th>
       <th>Telefone</th>
-      <th>Whatsapp</th>
+      <th>Whatsapp PC</th>
+      <th>Whatsapp Celular</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,13 +22,18 @@
         <%= order_change.order_id %></td>
         <td><%= order_change.client_name %></td>
         <td><%= order_change.description %></td>
-        <td><%= order_change.clothes %></td>
+        <td>
+          <% order_change.clothes.each do |oc| %>
+            <%=  oc %>
+            <br>
+          <% end %>
+        </td>
         <td><%= order_change.phone %></td>
         <td><a href="https://web.whatsapp.com/send?phone=55<%= order_change.phone.delete'() ' %>&amp;text=Oi <%= order_change.client_name.split(" ").first %>" target="_blank">Clique Aqui para mandar uma mensagem pelo WhatsApp</a></td>        
         <td><a href="https://api.whatsapp.com/send?phone=55<%= order_change.phone.delete'() ' %>&amp;text=Oi <%= order_change.client_name.split(" ").first %>" target="_blank">Clique Aqui para mandar uma mensagem pelo WhatsApp</a></td>
-        <td><%= link_to 'Show', order_change %></td>
-        <td><%= link_to 'Edit', edit_order_change_path(order_change) %></td>
-        <td><%= link_to 'Destroy', order_change, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Deletar', order_change, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Show', order_change %></td>
+        <td><%#= link_to 'Edit', edit_order_change_path(order_change) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -36,4 +41,4 @@
 
 <br>
 
-<%= link_to 'New Order Change', new_order_change_path %>
+<%#= link_to 'New Order Change', new_order_change_path %>
