--- a/app/views/wspedidos/initial_screen.html.erb
+++ b/app/views/wspedidos/initial_screen.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="col-12">
-    <h3>Insira o número do pedido da compra efetuada em nossa loja para que possamos identificar os produtos para qual deseja solicitar a troca.</h3>
+    <h3>Insira o número do pedido e o seu cpf da compra efetuada em nossa loja para que possamos identificar os produtos para qual deseja solicitar a troca.</h3>
   </div>
   <div class="row">
     <%= form_with url: search_orders_path do |form| %>
