--- a/app/views/wspedidos/initial_screen.html.erb
+++ b/app/views/wspedidos/initial_screen.html.erb
@@ -1,3 +1,10 @@
+<h5>Trocas de peças promocionais não arcamos com o custo do frete. Mas estamos sempre disponíveis para trocar nas compras feitas nos últimos 30 dias.
+    Quem tiver interesse de fazer troca, mesmo sendo peça de promoção.
+    Terá que enviar para a gente, e assim que chegar vamos dar um cupom para refazer a compra no site com tamanho certo. 
+    E vocês terão que pagar o frete de ida e de volta.
+      
+    WhatsApp: <a href="https://web.whatsapp.com/send?phone=5551982230340'%>&amp;text=Oi, estou com dúvida na troca." target="_blank">Clique Aqui para entrar em contato com o suporte.</a>
+</h5>
 <div class="row justify-content-center">
   <a href="/"><img src="https://17741.cdn.simplo7.net/static/17741/configuracao/logo_151893456531094.png" alt="Purchase Store" title="Purchase Store"></a>
   <div class="col-12">
@@ -13,13 +20,13 @@
       <div class="form-group">
         <div class="col-6 align-self-center">
           <%= form.label :pedido %>
-          <%= form.text_field :pedido, class: "form-control" %>
+          <%= form.text_field :pedido, class: "form-control", required: true %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-6">
           <%= form.label :cpf %>
-          <%= form.text_field :cpf, class: "form-control"  %>
+          <%= form.text_field :cpf, class: "form-control", required: true  %>
         </div>
       </div>
       <div class="col-6 align-self-center">
